Add Admin Choice Option and Class_User CRUD
